# TelegramGLib

./: README.md  meson.build  meson_options.txt  telegram-glib.doap
lib/: deps.in  meson.build  telegram-bot.vala  telegram-config.vala  telegram-types.vala  telegram-util.vala
lib/configs/answers/: answer-inline-query.vala  answer-web-app-query.vala
lib/configs/bot/: set-my-commands.vala  set-my-default-administrator-rights.vala  set-my-short-description.vala
lib/configs/chat/: leave-chat.vala
lib/configs/edit/: delete-message.vala
lib/configs/games/: set-game-score.vala
lib/configs/payments/: answer-shipping-query.vala  send-invoice.vala
lib/configs/send/: copy-message.vala  forward-message.vala  send-contact.vala  send-game.vala  send-poll.vala
lib/configs/sticker/: delete-sticker-set.vala  set-custom-emoji-sticker-set-thumbnail.vala  set-sticker-emoji-list.vala  set-sticker-mask-position.vala  set-sticker-position-in-set.vala
lib/types/: bot-description.vala  bot-name.vala  callback-query.vala  chat-administrator-rights.vala  chat-invite-link.vala  chat-photo.vala  chat-shared.vala  menu-button.vala  photo-size.vala  response.vala  user-profile-photos.vala  user.vala  venue.vala  video.vala
lib/types/chat/: chat-location.vala  chat.vala
lib/types/games/: game.vala
lib/types/inline/: chosen-inline-result.vala
lib/types/message/: message-entity.vala
lib/types/passport/: passport-file.vala
lib/types/payments/: shipping-address.vala  shipping-option.vala  successful-payment.vala
lib/types/stickers/: input-sticker.vala  mask-position.vala  sticker.vala
lib/types/web-app/: sent-web-app-message.vala
src/: bot.vala  config.vala  delegates.vala  deps.in  meson.build  util.vala
src/configs/answers/: answer-callback-query.vala
src/configs/bot/: delete-my-commands.vala  set-my-description.vala  set-my-name.vala
src/configs/edit/: edit-message-caption.vala  edit-message-live-location.vala  edit-message-media.vala  edit-message-reply-markup.vala  edit-message-text.vala  stop-message-live-location.vala  stop-poll.vala
src/configs/passport/: set-passport-data-errors.vala
src/configs/payments/: answer-pre-checkout-query.vala  create-invoice-link.vala
src/configs/send/: send-chat-action.vala  send-dice.vala  send-location.vala  send-message.vala  send-venue.vala
src/configs/sticker/: add-sticker-to-set.vala  create-new-sticker-set.vala  delete-sticker-from-set.vala  set-sticker-keywords.vala  set-sticker-set-thumbnail.vala  set-sticker-set-title.vala  upload-sticker.vala
src/handlers/: abstract-handler.vala  callback-query-handler.vala  chosen-inline-result-handler.vala  command-handler.vala  inline-query-handler.vala  meson.build  message-handler.vala
src/requests/: meson.build
src/requests/answers/: answer-callback-query.vala  answer-inline-query.vala  answer-web-app-query.vala
src/requests/bot/: delete-my-commands.vala  set-my-commands.vala  set-my-default-administrator-rights.vala  set-my-description.vala  set-my-name.vala  set-my-short-description.vala
src/requests/chat/: leave-chat.vala
src/requests/edit/: delete-message.vala  delete-messages.vala  edit-message-caption.vala  edit-message-live-location.vala  edit-message-media.vala  edit-message-reply-markup.vala  edit-message-text.vala  stop-message-live-location.vala  stop-poll.vala
src/requests/games/: set-game-score.vala
src/requests/passport/: set-passport-data-errors.vala
src/requests/payments/: answer-pre-checkout-query.vala  answer-shipping-query.vala  create-invoice-link.vala  send-invoice.vala
src/requests/send/: copy-message.vala  copy-messages.vala  forward-message.vala  forward-messages.vala  send-chat-action.vala  send-contact.vala  send-dice.vala  send-game.vala  send-location.vala  send-message.vala  send-poll.vala  send-venue.vala  set-message-reaction.vala
src/requests/sticker/: add-sticker-to-set.vala  create-new-sticker-set.vala  delete-sticker-from-set.vala  delete-sticker-set.vala  set-custom-emoji-sticker-set-thumbnail.vala  set-sticker-emoji-list.vala  set-sticker-keywords.vala  set-sticker-mask-position.vala  set-sticker-position-in-set.vala  set-sticker-set-thumbnail.vala  set-sticker-set-title.vala  upload-sticker.vala
src/types/: animation.vala  audio.vala  bot-command-scope.vala  bot-command.vala  bot-description.vala  bot-name.vala  bot-short-description.vala  callback-query.vala  chat-administrator-rights.vala  chat-invite-link.vala  chat-photo.vala  chat-shared.vala  contact.vala  dice.vala  document.vala  external-reply-info.vala  file.vala  forum-topic.vala  link-preview-options.vala  location.vala  login-url.vala  menu-button.vala  meson.build  photo-size.vala  poll.vala  reply-keyboard-markup.vala  reply-parameters.vala  response-parameters.vala  response.vala  story.vala  switch-inline-query-chosen-chat.vala  text-quote.vala  update.vala  user-profile-photos.vala  user-shared.vala  user.vala  users-shared.vala  venue.vala  video-note.vala  video.vala  (+1 more)
src/types/bot/: bot-command.vala  bot-description.vala  bot-name.vala  bot-short-description.vala
src/types/chat/: chat-id.vala  chat-join-request.vala  chat-location.vala  chat-permissions.vala  chat.vala
src/types/games/: callback-game.vala  game-high-score.vala  game.vala
src/types/inline/: chosen-inline-result.vala  inline-query.vala
src/types/input-media/: input-media-animation.vala  input-media-audio.vala  input-media-document.vala  input-media-photo.vala  input-media-video.vala  input-media.vala
src/types/keyboard/: force-reply.vala  inline-keyboard-markup.vala  reply-keyboard-markup.vala  reply-keyboard-remove.vala
src/types/message/: inaccessible-message.vala  maybe-inaccessible-message.vala  message-entity.vala  message-id.vala  message.vala
src/types/passport/: encrypted-credentials.vala  encrypted-passport-element.vala  passport-data.vala  passport-file.vala
src/types/payments/: invoice.vala  labeled-price.vala  order-info.vala  pre-checkout-query.vala  shipping-address.vala  shipping-option.vala  shipping-query.vala  successful-payment.vala
(+217 files in other folders)
