lib_sources += files([
    'send/send-message.vala',
    'send/forward-message.vala',
    'send/copy-message.vala',
    
    'send/media/send-photo.vala',
    'send/media/send-audio.vala',
    'send/media/send-document.vala',
    'send/media/send-video.vala',
    'send/media/send-animation.vala',
    'send/media/send-voice.vala',
    'send/media/send-video-note.vala',
    'send/media/send-media-group.vala',
    
    'send/send-location.vala',
    'send/send-venue.vala',
    'send/send-contact.vala',
    'send/send-poll.vala',
    'send/send-dice.vala',
    'send/send-chat-action.vala',
    
    'chat/member/ban-chat-member.vala',
    'chat/member/unban-chat-member.vala',
    'chat/member/restrict-chat-member.vala',
    'chat/member/promote-chat-member.vala',
    'chat/member/set-chat-administrator-custom-title.vala',
    'chat/member/ban-chat-sender-chat.vala',
    'chat/member/unban-chat-sender-chat.vala',
    
    'chat/manage/set-chat-permissions.vala',
    
    'chat/invite-link/export-chat-invite-link.vala',
    'chat/invite-link/create-chat-invite-link.vala',
    'chat/invite-link/edit-chat-invite-link.vala',
    'chat/invite-link/revoke-chat-invite-link.vala',
    'chat/invite-link/approve-chat-join-request.vala',
    'chat/invite-link/decline-chat-join-request.vala',
    
    'chat/manage/set-chat-photo.vala',
    'chat/manage/delete-chat-photo.vala',
    'chat/manage/set-chat-title.vala',
    'chat/manage/set-chat-description.vala',
    'chat/manage/pin-chat-message.vala',
    'chat/manage/unpin-chat-message.vala',
    'chat/manage/unpin-all-chat-messages.vala',
    
    'chat/leave-chat.vala',
    
    'chat/sticker/set-chat-sticker-set.vala',
    'chat/sticker/delete-chat-sticker-set.vala',
    
    'chat/forum/create-forum-topic.vala',
    'chat/forum/edit-forum-topic.vala',
    'chat/forum/close-forum-topic.vala',
    'chat/forum/reopen-forum-topic.vala',
    'chat/forum/delete-forum-topic.vala',
    'chat/forum/unpin-all-forum-topic-messages.vala',
    'chat/forum/edit-general-forum-topic.vala',
    'chat/forum/close-general-forum-topic.vala',
    'chat/forum/reopen-general-forum-topic.vala',
    'chat/forum/hide-general-forum-topic.vala',
    'chat/forum/unhide-general-forum-topic.vala',
    
    'answers/answer-callback-query.vala',
    
    'bot/set-my-commands.vala',
    'bot/delete-my-commands.vala',
    'bot/set-my-name.vala',
    'bot/set-my-description.vala',
    'bot/set-my-short-description.vala',
    
    'chat/manage/set-chat-menu-button.vala',
    
    'bot/set-my-default-administrator-rights.vala',
    
    'edit/edit-message-text.vala',
    'edit/edit-message-caption.vala',
    'edit/edit-message-media.vala',
    'edit/edit-message-live-location.vala',
    'edit/stop-message-live-location.vala',
    'edit/edit-message-reply-markup.vala',
    'edit/stop-poll.vala',
    'edit/delete-message.vala',
    
    'send/media/send-sticker.vala',
    
    'sticker/upload-sticker.vala',
    'sticker/create-new-sticker-set.vala',
    'sticker/add-sticker-to-set.vala',
    'sticker/set-sticker-position-in-set.vala',
    'sticker/delete-sticker-from-set.vala',
    'sticker/set-sticker-emoji-list.vala',
    'sticker/set-sticker-keywords.vala',
    'sticker/set-sticker-mask-position.vala',
    'sticker/set-sticker-set-title.vala',
    'sticker/set-sticker-set-thumbnail.vala',
    'sticker/set-custom-emoji-sticker-set-thumbnail.vala',
    'sticker/delete-sticker-set.vala',
    
    'answers/answer-inline-query.vala',
    'answers/answer-web-app-query.vala',
    
    'payments/send-invoice.vala',
    'payments/create-invoice-link.vala',
    'payments/answer-shipping-query.vala',
    'payments/answer-pre-checkout-query.vala',
    
    'passport/set-passport-data-errors.vala',
    
    'send/send-game.vala',
    
    'games/set-game-score.vala',
])