lib_sources += files([
    'response.vala',
    
    'update.vala',
    'user.vala',
    
    'chat/chat.vala',
    
    'message/message.vala',
    'message/message-id.vala',
    'message/message-entity.vala',
    
    'photo-size.vala',
    'animation.vala',
    'audio.vala',
    'document.vala',
    'video.vala',
    'video-note.vala',
    'voice.vala',
    'contact.vala',
    'dice.vala',
    'poll.vala',
    'location.vala',
    'venue.vala',
    
    'message/chat-event/web-app-data.vala',
    'message/chat-event/proximity-alert-triggered.vala',
    'message/chat-event/message-auto-delete-timer-changed.vala',
    'message/chat-event/forum/forum-topic-created.vala',
    'message/chat-event/forum/forum-topic-closed.vala',
    'message/chat-event/forum/forum-topic-edited.vala',
    'message/chat-event/forum/forum-topic-reopened.vala',
    'message/chat-event/forum/general-forum-topic-hidden.vala',
    'message/chat-event/forum/general-forum-topic-unhidden.vala',
    
    'user-shared.vala',
    'chat-shared.vala',
    
    'message/chat-event/write-access-allowed.vala',
    'message/chat-event/video/video-chat-scheduled.vala',
    'message/chat-event/video/video-chat-started.vala',
    'message/chat-event/video/video-chat-ended.vala',
    'message/chat-event/video/video-chat-participants-invited.vala',
    
    'user-profile-photos.vala',
    'file.vala',
    'web-app/web-app-info.vala',
    
    'keyboard/reply-keyboard-markup.vala',
    'keyboard/buttons/keyboard-button.vala',
    'keyboard/buttons/keyboard-button-request-user.vala',
    'keyboard/buttons/keyboard-button-request-chat.vala',
    'keyboard/buttons/keyboard-button-poll-type.vala',
    'keyboard/reply-keyboard-remove.vala',
    'keyboard/inline-keyboard-markup.vala',
    'keyboard/buttons/inline-keyboard-button.vala',
    
    'login-url.vala',
    'switch-inline-query-chosen-chat.vala',
    'callback-query.vala',
    'keyboard/force-reply.vala',
    'chat-photo.vala',
    'chat-invite-link.vala',
    'chat-administrator-rights.vala',
    
    'chat/member/chat-member.vala',
    'chat/member/chat-member-owner.vala',
    'chat/member/chat-member-administrator.vala',
    'chat/member/chat-member-member.vala',
    'chat/member/chat-member-restricted.vala',
    'chat/member/chat-member-left.vala',
    'chat/member/chat-member-banned.vala',
    'chat/member/chat-member-updated.vala',
    
    'chat/chat-join-request.vala',
    'chat/chat-permissions.vala',
    'chat/chat-location.vala',
    
    'forum-topic.vala',
    'bot-command.vala',
    'bot-command-scope.vala',
    'bot-name.vala',
    'bot-description.vala',
    'bot-short-description.vala',
    'menu-button.vala',
    'response-parameters.vala',
    
    'input-media/input-media.vala',
    'input-media/input-media-animation.vala',
    'input-media/input-media-document.vala',
    'input-media/input-media-audio.vala',
    'input-media/input-media-photo.vala',
    'input-media/input-media-video.vala',
    
    'stickers/sticker.vala',
    'stickers/sticker-set.vala',
    'stickers/mask-position.vala',
    'stickers/input-sticker.vala',
    
    'inline/inline-query.vala',
    
    'inline/result/inline-query-results-button.vala',
    'inline/result/inline-query-result-article.vala',
    'inline/result/inline-query-result-photo.vala',
    'inline/result/inline-query-result-gif.vala',
    'inline/result/inline-query-result-mpeg4gif.vala',
    'inline/result/inline-query-result-video.vala',
    'inline/result/inline-query-result-audio.vala',
    'inline/result/inline-query-result-voice.vala',
    'inline/result/inline-query-result-document.vala',
    'inline/result/inline-query-result-location.vala',
    'inline/result/inline-query-result-venue.vala',
    'inline/result/inline-query-result-contact.vala',
    'inline/result/inline-query-result-game.vala',
    'inline/result/inline-query-result-cached-photo.vala',
    'inline/result/inline-query-result-cached-gif.vala',
    'inline/result/inline-query-result-cached-mpeg4gif.vala',
    'inline/result/inline-query-result-cached-sticker.vala',
    'inline/result/inline-query-result-cached-document.vala',
    'inline/result/inline-query-result-cached-video.vala',
    'inline/result/inline-query-result-cached-voice.vala',
    'inline/result/inline-query-result-cached-audio.vala',
    
    'inline/input-message/input-text-message-content.vala',
    'inline/input-message/input-location-message-content.vala',
    'inline/input-message/input-venue-message-content.vala',
    'inline/input-message/input-contact-message-content.vala',
    'inline/input-message/input-invoice-message-content.vala',
    
    'inline/chosen-inline-result.vala',
    
    'web-app/sent-web-app-message.vala',
    
    'payments/labeled-price.vala',
    'payments/invoice.vala',
    'payments/shipping-address.vala',
    'payments/order-info.vala',
    'payments/shipping-option.vala',
    'payments/successful-payment.vala',
    'payments/shipping-query.vala',
    'payments/pre-checkout-query.vala',
    
    'passport/passport-data.vala',
    'passport/passport-file.vala',
    'passport/encrypted-passport-element.vala',
    'passport/encrypted-credentials.vala',
    
    'passport/error/passport-element-error.vala',
    'passport/error/passport-element-error-data-field.vala',
    'passport/error/passport-element-error-front-side.vala',
    'passport/error/passport-element-error-reverse-side.vala',
    'passport/error/passport-element-error-selfie.vala',
    'passport/error/passport-element-error-file.vala',
    'passport/error/passport-element-error-files.vala',
    'passport/error/passport-element-error-translation-file.vala',
    'passport/error/passport-element-error-translation-files.vala',
    'passport/error/passport-element-error-unspecified.vala',
    
    'games/game.vala',
    'games/callback-game.vala',
    'games/game-high-score.vala',
])